Fixed for Orange Pi Zero 2W overlays
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22968 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -63,7 +63,7 @@ ifneq ($(wildcard $(MUNTSOS)/boot/$(BOARDBASE)/overlays),)
 	cd $(DESTDIR) && mv $(shell basename $(KERNEL_DTB)).dtb $(BOARDNAME).dtb
 	$(MAKE) -C $(MUNTSOS)/boot/$(BOARDBASE)/overlays DTC=$(KERNEL_DTC)
 	mkdir -p $(DESTDIR)/overlays
-	cp $(MUNTSOS)/boot/BeaglePlay/overlays/*.dtbo $(DESTDIR)/overlays
+	cp $(MUNTSOS)/boot/$(BOARDBASE)/overlays/*.dtbo $(DESTDIR)/overlays
 endif
 
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
