--- a/boot/BeaglePlay/uboot/uboot.config
+++ b/boot/BeaglePlay/uboot/uboot.config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# U-Boot 2025.04-rc1 Configuration
+# U-Boot 2025.04-rc4 Configuration
 #
 
 #
-# Compiler: aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.26.0) 13.2.0
+# Compiler: aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.27.0) 14.2.0
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
 CONFIG_HAVE_SETJMP=y
@@ -185,7 +185,6 @@ CONFIG_ARCH_K3=y
 # CONFIG_TARGET_PRESIDIO_ASIC is not set
 # CONFIG_TARGET_XENGUEST_ARM64 is not set
 # CONFIG_ARCH_GXP is not set
-# CONFIG_STATIC_MACH_TYPE is not set
 CONFIG_TI_SECURE_DEVICE=y
 CONFIG_TEXT_BASE=0x80800000
 CONFIG_SYS_MALLOC_LEN=0x2000000
@@ -299,7 +298,7 @@ CONFIG_SYS_LITTLE_ENDIAN=y
 CONFIG_LOCALVERSION="-MuntsOS-BeaglePlay"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130200
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
@@ -1053,6 +1052,7 @@ CONFIG_SPL_CLK=y
 # CONFIG_CLK_CCF is not set
 # CONFIG_CLK_GPIO is not set
 # CONFIG_SPL_CLK_GPIO is not set
+# CONFIG_CLK_STUB is not set
 # CONFIG_CLK_CDCE9XX is not set
 # CONFIG_CLK_ICS8N3QV01 is not set
 # CONFIG_CLK_K210 is not set
@@ -1187,7 +1187,6 @@ CONFIG_DA8XX_GPIO=y
 # CONFIG_VYBRID_GPIO is not set
 # CONFIG_SIFIVE_GPIO is not set
 # CONFIG_ZYNQ_GPIO is not set
-# CONFIG_DM_74X164 is not set
 # CONFIG_DM_PCA953X is not set
 # CONFIG_SPL_DM_PCA953X is not set
 # CONFIG_PCA953X is not set
@@ -1826,6 +1825,7 @@ CONFIG_SPL_USB_DWC3_GENERIC=y
 CONFIG_SPL_USB_DWC3_AM62=y
 CONFIG_USB_DWC3_AM62=y
 # CONFIG_USB_DWC3_LAYERSCAPE is not set
+# CONFIG_USB_DWC3_STI is not set
 
 #
 # PHY Subsystem
@@ -1984,17 +1984,21 @@ CONFIG_SUPPORT_ACPI=y
 #
 # Alternative crypto libraries
 #
-CONFIG_LEGACY_CRYPTO=y
+CONFIG_LEGACY_HASHING_AND_CRYPTO=y
 # CONFIG_MBEDTLS_LIB is not set
-CONFIG_LEGACY_CRYPTO_BASIC=y
+CONFIG_LEGACY_HASHING=y
 CONFIG_SHA1_LEGACY=y
 CONFIG_SHA256_LEGACY=y
 CONFIG_SHA512_LEGACY=y
 CONFIG_MD5_LEGACY=y
+CONFIG_LEGACY_CRYPTO=y
+CONFIG_SPL_LEGACY_HASHING_AND_CRYPTO=y
+# CONFIG_SPL_MBEDTLS_LIB is not set
+CONFIG_SPL_LEGACY_HASHING=y
 CONFIG_SPL_SHA1_LEGACY=y
 CONFIG_SPL_SHA256_LEGACY=y
 CONFIG_SPL_SHA512_LEGACY=y
-CONFIG_LEGACY_CRYPTO_CERT=y
+CONFIG_SPL_LEGACY_CRYPTO=y
 
 #
 # Security support
@@ -2034,6 +2038,7 @@ CONFIG_MD5=y
 # CONFIG_SPL_MD5 is not set
 CONFIG_CRC8=y
 CONFIG_SPL_CRC8=y
+CONFIG_CRC16=y
 # CONFIG_SPL_CRC16 is not set
 CONFIG_CRC32=y
 
@@ -2091,6 +2096,7 @@ CONFIG_LMB=y
 # Tools options
 #
 CONFIG_MKIMAGE_DTC_PATH="dtc"
+CONFIG_TOOLS_CRC16=y
 CONFIG_TOOLS_CRC32=y
 CONFIG_TOOLS_LIBCRYPTO=y
 CONFIG_TOOLS_KWBIMAGE=y
