--- a/boot/RaspberryPi/overlays/pwmchip0.dts
+++ b/boot/RaspberryPi/overlays/pwmchip0.dts
@@ -2,7 +2,7 @@
 // "BeagleBone style" pin management.  You have to configure PWM outputs
 // as a separation operation with the pinctrl command.
 
-// See also: http://git.munts.com/muntsos/doc/AppNote12-pinctrl.pdf
+// See also: https://repo.munts.com/muntsos/doc/AppNote12-pinctrl.pdf
 
 /dts-v1/;
 /plugin/;
