Build curl --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23009 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -580,7 +580,7 @@ $(CURL_SRC): $(CURL_DIST)
 # Build curl
 
 $(INSTALLDIR)/lib/libcurl.a: $(CURL_SRC)
-	cd $(CURL_SRC) ; ./configure $(BUILDOS) $(TARGETOS) --prefix=/$(INSTALLDIR) --with-openssl=$(DESTDIR)/$(INSTALLDIR) --with-zlib=$(DESTDIR)/$(INSTALLDIR) --without-brotli --without-libpsl CC=$(CROSS_COMPILE)gcc
+	cd $(CURL_SRC) ; ./configure $(BUILDOS) $(TARGETOS) --prefix=/$(INSTALLDIR) --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt --with-openssl=$(DESTDIR)/$(INSTALLDIR) --with-zlib=$(DESTDIR)/$(INSTALLDIR) --without-brotli --without-libpsl CC=$(CROSS_COMPILE)gcc
 	$(MAKE) -C $(CURL_SRC)
 	$(MAKE) -C $(CURL_SRC) install DESTDIR=$(DESTDIR)
 	touch $@
