--- a/bootkernel/initramfs/busybox.config
+++ b/bootkernel/initramfs/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Mon Nov 25 14:37:19 2024
+# Wed Mar 19 16:34:30 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -1050,7 +1050,7 @@ CONFIG_MAKEMIME=y
 # CONFIG_FEATURE_POPMAILDIR_DELIVERY is not set
 CONFIG_REFORMIME=y
 CONFIG_FEATURE_REFORMIME_COMPAT=y
-# CONFIG_SENDMAIL is not set
+CONFIG_SENDMAIL=y
 
 #
 # Process Utilities
