Include symlinks in libsimpleio/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23173 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/libsimpleio-common/Makefile
+++ b/toolchain/rpms/libsimpleio-common/Makefile
@@ -40,6 +40,7 @@ package.rpm:
 	rm -rf					$(RPMDIR)/usr/local/share/libsimpleio/ada/lib
 	cd $(RPMDIR) && find usr/local/share/libsimpleio -type d -exec echo "%dir /{}" ";"   >>../specfile
 	cd $(RPMDIR) && find usr/local/share/libsimpleio -type f -exec echo "/{}" ";"        >>../specfile
+	cd $(RPMDIR) && find usr/local/share/libsimpleio -type l -exec echo "/{}" ";"        >>../specfile
 	rpmbuild --buildroot=`pwd`/$(RPMDIR) --define="_topdir `pwd`/rpmbuild" -bb specfile
 	cp rpmbuild/RPMS/*/*.rpm .
 	rm -rf rpmbuild specfile
