--- a/toolchain/libsimpleio/control
+++ b/toolchain/libsimpleio/control
@@ -4,5 +4,5 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: Linux Simple I/O library for @@TARGET@@
+Description: Linux Simple I/O library for @@BOARDNAME@@
 Depends: munts-libsimpleio, muntsos-common
