--- a/toolchain/libwioe5ham1/control
+++ b/toolchain/libwioe5ham1/control
@@ -4,5 +4,5 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: Linux Wio-E5 Driver Library (Amateur Radio Flaver #1) for @@TARGET@@
+Description: Linux Wio-E5 Driver Library (Amateur Radio Flaver #1) for @@BOARDNAME@@
 Depends: gcc-@@TOOLCHAIN@@-libsimpleio
