--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -95,11 +95,16 @@ libwioe5ham1.so:
 	cp $(LIBSIMPLEIO)/ada/shared-libs/libwioe5ham1/lib/libwioe5ham1.so .
 	$(STRIP) $@
 
+libwioe5p2p.so:
+	$(MAKE) -C $(LIBSIMPLEIO)/ada/shared-libs/libwioe5p2p
+	cp $(LIBSIMPLEIO)/ada/shared-libs/libwioe5p2p/lib/libwioe5p2p.so .
+	$(STRIP) $@
+
 ###############################################################################
 
 # Create Debian package file
 
-$(PKGDIR): libsimpleio.a libsimpleio.so libsimpleio.lib libwioe5ham1.so
+$(PKGDIR): libsimpleio.a libsimpleio.so libsimpleio.lib libwioe5ham1.so libwioe5p2p.so
 	mkdir -p				$(PKGDIR)/DEBIAN
 	install -cm 0644 control		$(PKGDIR)/DEBIAN/control
 	sed -i s/@@ARCH@@/$(PKGARCH)/g		$(PKGDIR)/DEBIAN/control
@@ -111,6 +116,7 @@ $(PKGDIR): libsimpleio.a libsimpleio.so libsimpleio.lib libwioe5ham1.so
 	mkdir -p				$(PKGDIR)$(INCDIR)
 	ln -s /usr/local/include/libsimpleio	$(PKGDIR)$(INCDIR)/libsimpleio
 	install -cm 0644 $(LIBSIMPLEIO)/ada/shared-libs/libwioe5ham1/libwioe5ham1.h $(PKGDIR)$(INCDIR)
+	install -cm 0644 $(LIBSIMPLEIO)/ada/shared-libs/libwioe5p2p/libwioe5p2p.h $(PKGDIR)$(INCDIR)
 	mkdir -p				$(PKGDIR)$(LIBDIR)
 	install -cm 0644 $(LIBSIMPLEIO)/COPYING	$(PKGDIR)$(LIBDIR)/libsimpleio.COPYING
 	install -cm 0644 *.a			$(PKGDIR)$(LIBDIR)
@@ -131,6 +137,7 @@ clean:
 	-rm -rf compile.done obj libsimpleio $(PKGDIR) $(PKGFILE)
 	-rm -rf *.a *.lib *.obj *.so
 	$(MAKE) -C $(LIBSIMPLEIO)/ada/shared-libs/libwioe5ham1 clean
+	$(MAKE) -C $(LIBSIMPLEIO)/ada/shared-libs/libwioe5p2p clean
 
 reallyclean: clean
 
