Rename package to MuntsOS canonical form
<program>-muntsos-all.nupkg


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23387 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/wioe5_ham1_rabbitmq/Makefile
+++ b/extensions/wioe5_ham1_rabbitmq/Makefile
@@ -33,7 +33,7 @@ include $(LIBSIMPLEIO)/csharp/include/coreapp.mk
 # Build the project
 
 default: coreapp_mk_nupkg
-	mv $(PROGNAME).$(PROGVERSION).nupkg $(PROGNAME).nupkg
+	mv $(PROGNAME).$(PROGVERSION).nupkg $(PROGNAME)-muntsos-all.nupkg
 
 # Remove working files
 
