Wildcard the version for MySql.Data
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23401 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/wioe5_ham1_mysql/wioe5_ham1_mysql.csproj
+++ b/extensions/wioe5_ham1_mysql/wioe5_ham1_mysql.csproj
@@ -10,11 +10,11 @@
     <NoWarn>NU5118</NoWarn>
   </PropertyGroup>
 
-  <!-- Reference NuGet package libsimpleio (https://www.nuget.org/packages/libsimpleio) -->
+  <!-- Reference NuGet packages -->
 
   <ItemGroup>
     <PackageReference Include="libsimpleio" Version="2.*" />
-    <PackageReference Include="MySql.Data" Version="9.3.0" />
+    <PackageReference Include="MySql.Data" Version="9.*" />
   </ItemGroup>
 
   <!-- Include library assemblies -->
