--- a/boot/RaspberryPi/overlays/MUNTS-0018.dts
+++ b/boot/RaspberryPi/overlays/MUNTS-0018.dts
@@ -26,11 +26,10 @@
 			#size-cells = <0>;
 			status = "okay";
 
-			mcp3204_00: mcp3204@1{
-				compatible = "microchip,mcp3204";
-				reg = <1 1>;
+			mcp3204_01: mcp3204@1 {
+				compatible = "mcp3204";
+				reg = <1>;
 				spi-max-frequency = <1000000>;
-				status = "okay";
 			};
 		};
 	};
