--- a/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
+++ b/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
@@ -9,18 +9,17 @@
 
 	// Enable MCP3204 on GPIO233 aka Raspberry Pi GPIO7
 
-	fragment@4 {
+	fragment@0 {
 		target = <&spi1>;
 		__overlay__ {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			status = "okay";
 
-			mcp3204_00: mcp3204@1{
-				compatible = "microchip,mcp3204";
-				reg = <1 1>;
+			mcp3204_11: mcp3204@1 {
+				compatible = "mcp3204";
+				reg = <1>;
 				spi-max-frequency = <1000000>;
-				status = "okay";
 			};
 		};
 	};
